Use config path from command line if specified

--- a/qs-tunnel.cabal
+++ b/qs-tunnel.cabal
@@ -27,3 +27,4 @@ executable qs-tunnel
                      , bytestring
                      , time
                      , hslogger
+                     , optparse-applicative
