--- a/qs-tunnel.cabal
+++ b/qs-tunnel.cabal
@@ -16,11 +16,11 @@ extra-source-files:  README.md
 executable qs-tunnel
   hs-source-dirs:      src
   main-is:             Main.hs
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror -Wno-type-defaults
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
                      , libatrade
                      , aeson
-                     , monad-loops
                      , zeromq4-haskell
                      , zeromq4-haskell-zap
                      , text
@@ -28,3 +28,4 @@ executable qs-tunnel
                      , time
                      , hslogger
                      , optparse-applicative
+                     , errors
